# qpid-python

./: .asf.yaml  Jenkinsfile  NOTICE.txt  README.md  RELEASE.md  pyproject.toml  qpid-python-test  setup.py
.github/workflows/: initial-config.json  python-package.yml  python-publish.yml
examples/api/: drain  hello  hello_xml  server  spout  statistics.py
examples/reservations/: common.py  reserve
mllib/: __init__.py  dom.py  parsers.py  transforms.py
qpid/: __init__.py  client.py  codec.py  codec010.py  compat.py  concurrency.py  connection.py  connection08.py  datatypes.py  debug.py  delegate.py  delegates.py  disp.py  exceptions.py  framer.py  framing.py  generator.py  lexer.py  log.py  management.py  managementdata.py  message.py  mimetype.py  ops.py  packer.py  peer.py  py3compat.py  queue.py  reference.py  sasl.py  selector.py  session.py  spec08.py  specs_config.py  testlib.py  util.py
qpid/messaging/: __init__.py  address.py  constants.py  driver.py  endpoints.py  message.py  transports.py  util.py
qpid/saslmech/: amqplain.py  anonymous.py  cram_md5.py  cram_md5_hex.py  external.py  finder.py  plain.py  scram.py  scram_sha_1.py  scram_sha_256.py
qpid/tests/: __init__.py  codec.py  codec010.py  connection.py  datatypes.py  framing.py  mimetype.py  parser.py  queue.py  spec010.py  util.py
qpid_tests/: __init__.py
qpid_tests/broker_0_10/: __init__.py  alternate_exchange.py  broker.py  dtx.py  example.py  exchange.py  extensions.py  lvq.py  management.py  message.py  msg_groups.py  new_api.py  persistence.py  priority.py  qmf_events.py  query.py  (+4 more)
(+29 files in other folders)
