[tool.poetry]
name = "qpid-python"
version = "0.0.0"
description = ""
authors = ["Apache Qpid <users@qpid.apache.org>"]
license = "Apache Software License"
readme = "README.md"
packages = [{include = "qpid_python"}]

[tool.poetry.dependencies]

# https://github.com/python-poetry/poetry/issues/4983
# dependency groups don't work on the latest poetry available for python 2.7
# [tool.poetry.group.dev.dependencies]

[tool.poetry.dev-dependencies]
# need this to resolve flake8 on python2.7
importlib-metadata = {version = "^2.1.3", python = "^2.7"}
flake8 = [
    {version = "^3.9.2", python = "^2.7" },
    {version = "^6.0.0", python = ">=3.8.1" },
]
pytest = { version = "^7.3.0", python = ">=3.7" }
ruff = { version = "^0.0.261", python = ">=3.7" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
